About section mobile responsive bug fixed

--- a/src/sections/About/about.module.scss
+++ b/src/sections/About/about.module.scss
@@ -19,14 +19,12 @@
     justify-content: space-between;
 
     @include respond(phone-large) {
-      grid-template-columns: 1fr;
+      grid-template-columns: minmax(min-content, 100%);
     }
   }
 
   &__content {
     margin-top: 3rem;
-    grid-column: 1/2;
-    grid-row: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
